--- a/HazelToolsVS/HazelTools.csproj
+++ b/HazelToolsVS/HazelTools.csproj
@@ -67,9 +67,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Clide" Version="4.1.1" ExcludeAssets="runtime" />
-    <PackageReference Include="Clide.Windows" Version="4.1.1" ExcludeAssets="runtime" />
-    <PackageReference Include="GodotTools.IdeMessaging" Version="1.1.1" />
+    <PackageReference Include="Clide">
+      <Version>3.2.46</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.32112.339" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
