--- a/HazelToolsVS/HazelTools.csproj
+++ b/HazelToolsVS/HazelTools.csproj
@@ -49,8 +49,11 @@
     <Compile Include="AttachHazelnutCommand.cs" />
     <Compile Include="Debugging\HazelDebuggerSession.cs" />
     <Compile Include="Debugging\HazelStartInfo.cs" />
+    <Compile Include="HazelSolutionEventsListener.cs" />
+    <Compile Include="MonoSoftCustomLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HazelToolsPackage.cs" />
+    <Compile Include="SolutionEventsListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
