Improved the general user experience
- A message box will now appear on a failed connection attempt
- "Attach to Hazelnut" button is now disabled immediately after you press it as an indicator that we're trying to connect, and so that you don't accidentially press multiple times
- Added options page for Hazel Tools
- The port that the extension will try to connect to is now configurable from the options page
- The maximum number of failed connection attemps is now configurable from the options page
- Changed version to 1.2.0

--- a/HazelToolsVS/HazelTools.csproj
+++ b/HazelToolsVS/HazelTools.csproj
@@ -50,6 +50,9 @@
     <Compile Include="Debugging\HazelDebuggerSession.cs" />
     <Compile Include="Debugging\HazelStartInfo.cs" />
     <Compile Include="HazelSolutionEventsListener.cs" />
+    <Compile Include="HazelToolsGeneralOptions.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HazelToolsPackage.cs" />
     <Compile Include="SolutionEventsListener.cs" />
